# self_learning_agent

./: .gitignore  README.md  activity_recorder.py  browser_agent.py  derive_workflow.py  desktop_agent.py  dom_script.py  execute_workflow.py  orchestrator.py  pyproject.toml  test_browser.py  test_cords.py  workflow_planner.py
browser_desktop_agent/: README.md  browser_agent.py  extract_user_workflow.py  record_user_workflow.py
browser_desktop_agent/ocr/: gateway_v1.py  gateway_v2.py
ocr/: Dockerfile.deepseek_ocr  Dockerfile.deepseek_ocr_v2  download_model.py  find_loc.py  observation.json  observe.py
state_model/: belief.py  chat_loop.py  diagnose_retrieval.py  embedding_retrieval.py  hybrid_fact_matching.py  llm_confidence_chat_loop.py  procedure_compiler.py  procedure_compiler_hybrid.py  pydantic_models.py  state_schema.py
